FullQa New/src/PS Enterprise/objects/Skill_Certification_Zone__c.object
<CustomObject>
    <customHelpPage>SkillCertificationZoneHelp</customHelpPage>
    <description>Identifies a region, practice, or group under which resources may be rated for a skill.</description>
    <fields>
        <fullName>Cascading__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cascading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Certification__c</fullName>
        <label>Skill / Certification</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Skill / Certification Zones</relationshipLabel>
        <relationshipName>Skill_Certification_Zones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill / Certification Zone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Skill_Certification__c</columns>
        <columns>Cascading__c</columns>
        <columns>Region__c</columns>
        <columns>Practice__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SZ-{0}</displayFormat>
        <label>Skill / Certification Zone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill / Certification Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Skill_Must_be_for_Exactly_One_Zone_RPG</fullName>
        <active>true</active>
        <description>The Skill Zone must specify either a Region or a Practice or a Group for which it applies, but no more than one.</description>
        <errorConditionFormula>OR(AND(OR(ISNULL(Region__c),(Region__c=&apos;&apos;)),OR(ISNULL(Practice__c),(Practice__c=&apos;&apos;)),OR(ISNULL(Group__c),(Group__c=&apos;&apos;))),AND(NOT(OR(ISNULL(Region__c),(Region__c=&apos;&apos;))),NOT(OR(ISNULL(Practice__c),(Practice__c=&apos;&apos;)))),AND(NOT(OR(ISNULL(Region__c),(Region__c=&apos;&apos;))),NOT(OR(ISNULL(Group__c),(Group__c=&apos;&apos;)))),AND(NOT(OR(ISNULL(Practice__c),(Practice__c=&apos;&apos;))),NOT(OR(ISNULL(Group__c),(Group__c=&apos;&apos;)))))</errorConditionFormula>
        <errorMessage>The Skill Zone must specify either a Region or a Practice or a Group for which it applies (but no more than one).</errorMessage>
    </validationRules>
</CustomObject>